# closest-pair-doubling

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ClosestPairDoubling.h  KthSmallest.h  Point.h  PointList.h  RandomGenerator.h  closest_pair_doubling.h  kth_smallest.h  point.h  point_list.h  random_generator.h
report/: .Rhistory  Project_Report.Rmd  Project_Report.tex  grid_data.txt  preamble.tex  random_data.txt
report/Runtime_testing/: grid_closest_pair_doubling  random_closest_pair_doubling
report/Runtime_testing/grid/: closest_pair_doubling_grid_200k  closest_pair_doubling_grid_800k  running_time_data.txt  sep_ann_loop_times.txt
report/Runtime_testing/grid/grid_3times_all/: grid_closest_pair_doubling  running_time_data.txt  sep_ann_loop_times.txt
report/Runtime_testing/grid/one_to_3times_each/: closest_pair_doubling_grid_1600k  closest_pair_doubling_grid_3200k  closest_pair_doubling_grid_400k
report/Runtime_testing/non_Eu/: sep_ann_loop_times.txt
report/Runtime_testing/random/: closest_pair_doubling_random_2000k  closest_pair_doubling_random_500k  sep_ann_loop_times.txt
report/Runtime_testing/random/generated_data/: running_time_data.txt  sep_ann_loop_times.txt
report/Runtime_testing/random/one_to_3times_each/: closest_pair_doubling_random_1000k  closest_pair_doubling_random_4000k  closest_pair_doubling_random_8000k
report/Runtime_testing/random/random_3times_all/: random_closest_pair_doubling  running_time_data.txt  sep_ann_loop_times.txt
report/images_&_data/closest_pair/brute_force/: non_Eu_running_time_data.txt  running_time_data.txt
report/images_&_data/closest_pair/grid_generation/: grid_sep_ann_data.txt  grid_sep_ann_data2.txt  grid_sepann_data.txt  outputs.txt  sep_ann_loop_times.txt
report/images_&_data/closest_pair/non_Euclidean_metrics/: outputs.txt  (+2 more)
report/images_&_data/kth_smallest/: kth_smallest_tests.txt
report/project_report/: Project_Report.Rmd  Project_Report.tex  non_Eu_data.txt  non_Eu_data_with_dist_count.txt  preamble.tex
report/report/: Project_Report.Rmd  Project_Report.pgf-plot.gnuplot  Project_Report.tex  grid_data.txt  non_Eu_data.txt  preamble.tex
src/: ClosestPairDoubling.cpp  KthSmallest.cpp  closest_pair_doubling.cpp  kth_smallest.cpp  main.cpp  point_list.cpp
test/: Program.cpp  Program.h  Test.cpp  Test.h  algorithm_runner.cpp  algorithm_runner.h  program.cpp  program.h
utils/: 2d_problem.cpp  2d_problem.h  merge_sort.cpp  merge_sort.h
utils/2d_problem/: 2d_problem.cpp  2d_problem.h  merge_sort.cpp
utils/non_Euclidean_problem/include/: closest_pair_non_Eu.h  kth_smallest_non_Eu.h  point_list_non_Eu.h  point_non_Eu.h
utils/non_Euclidean_problem/src/: closest_pair_non_Eu.cpp  kth_smallest_non_Eu.cpp
utils/non_Euclidean_problem/test/: algorithm_runner_non_Eu.cpp  algorithm_runner_non_Eu.h  program_non_Eu_part.cpp  program_non_Eu_part.h
utils/user_controller/: user_input_controller.cpp  user_input_controller.h
utils/user_io/: user_io.cpp  user_io.h
(+18 files in other folders)
